# opencalc

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  mise.toml  skills-lock.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  scripting.rs  selftest.rs  tests.rs
crates/core/src/algebra/: diff.rs  integrate.rs  mod.rs  series.rs  simplify.rs  solve.rs  subst.rs
crates/core/src/parse/: lexer.rs  parser.rs  syntax.rs
crates/core/src/runtime/: env.rs  eval.rs  matrix.rs  mod.rs
crates/core/src/types/: error.rs  expr.rs  mod.rs  rational.rs
crates/embedded/: .Brewfile  Cargo.toml  memory.x
crates/embedded/.cargo/: config.toml
crates/embedded/src/: main.rs
crates/gui/: Cargo.toml
crates/gui/src/: main.rs
