[package]
name = "core"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[features]
default = []
scripting = ["dep:rhai"]
scripting-std = ["scripting", "rhai/std"]
scripting-no-std = ["scripting", "rhai/no_std"]

[dependencies]
libm = "0.2"
rhai = { version = "1.24.0", default-features = false, optional = true }
